@@ -1,39 +1,41 @@
 package com.one.aim.service.impl;
 
-import com.one.aim.bo.CategoryBO;
-import com.one.aim.bo.FileBO;
-import com.one.aim.bo.ProductBO;
-import com.one.aim.bo.SellerBO;
+import com.one.aim.bo.*;
 import com.one.aim.constants.ErrorCodes;
 import com.one.aim.helper.ProductHelper;
 import com.one.aim.mapper.ProductMapper;
 import com.one.aim.repo.*;
 import com.one.aim.rq.ProductRq;
+import com.one.aim.rs.ProductCardRs;
+import com.one.aim.rs.ProductDetailsRs;
 import com.one.aim.rs.ProductRs;
 import com.one.aim.rs.data.ProductDataRs;
 import com.one.aim.rs.data.ProductDataRsList;
 import com.one.aim.service.FileService;
+import com.one.aim.service.NotificationService;
 import com.one.aim.service.ProductService;
+import com.one.aim.service.RecommendationService;
 import com.one.exception.BaseException;
 import com.one.utils.AuthUtils;
 import com.one.utils.Utils;
 import com.one.vm.core.BaseDataRs;
 import com.one.vm.core.BaseRs;
 import com.one.vm.utils.ResponseUtils;
+
+import com.one.vm.utils.SlugUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
-import org.webjars.NotFoundException;
 
+import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -46,17 +48,20 @@ public class ProductServiceImpl implements ProductService {
     private final SellerRepo sellerRepo;
     private final FileService fileService;
     private final UserActivityService userActivityService;
-    private final CategoryRepo  categoryRepo;
+    private final CategoryRepo categoryRepo;
     private final OrderItemBORepo orderItemBORepo;
-    private final CartRepo  cartRepo;
+    private final CartRepo cartRepo;
+    private final NotificationService notificationService;
+    private final RecommendationService recommendationService;
+    private final ReviewRepository reviewRepo;
+    private final ProductMapper productMapper;
 
     @Value("${app.frontend.product.url}")
     private String productFrontUrl;
 
-
-    // ===========================================================
-    // ADD PRODUCT (SELLER)
-    // ===========================================================
+    // ======================================================================
+    // SELLER: ADD PRODUCT
+    // ======================================================================
     @Override
     @Transactional
     public BaseRs addProduct(ProductRq rq) {
@@ -65,99 +70,106 @@ public class ProductServiceImpl implements ProductService {
 
             List<String> errors = ProductHelper.validateProduct(rq);
             if (!errors.isEmpty()) {
-                return ResponseUtils.failure(
-                        ErrorCodes.EC_INVALID_INPUT,
-                        errors
-                );
+                return ResponseUtils.failure(ErrorCodes.EC_INVALID_INPUT, errors);
             }
 
             Long sellerId = AuthUtils.getLoggedUserId();
             SellerBO seller = sellerRepo.findById(sellerId)
                     .orElseThrow(() -> new RuntimeException("Seller not found"));
 
-            //  Validate stock must be >= 1
             if (rq.getStock() == null || rq.getStock() < 1) {
-                return ResponseUtils.failure(
-                        ErrorCodes.EC_INVALID_INPUT,
-                        "Stock must be at least 1"
-                );
+                return ResponseUtils.failure(ErrorCodes.EC_INVALID_INPUT, "Stock must be at least 1");
             }
 
-            //  Validate price > 0
             if (rq.getPrice() == null || rq.getPrice() <= 0) {
-                return ResponseUtils.failure(
-                        ErrorCodes.EC_INVALID_INPUT,
-                        "Price must be greater than 0"
-                );
+                return ResponseUtils.failure(ErrorCodes.EC_INVALID_INPUT, "Price must be greater than 0");
             }
 
             ProductBO bo = new ProductBO();
+            bo.setSeller(seller);
             bo.setName(rq.getName());
+            // ========================
+// SLUG GENERATION (HERE)
+// ========================
+            String slug = SlugUtils.from(rq.getName());
+            int counter = 1;
+
+            while (productRepo.existsBySlug(slug)) {
+                slug = SlugUtils.from(rq.getName()) + "-" + counter++;
+            }
+
+            bo.setSlug(slug);
             bo.setDescription(rq.getDescription());
             bo.setPrice(rq.getPrice());
             bo.setStock(rq.getStock());
-            bo.setSeller(seller);
-            bo.setSlug(generateUniqueSlug(rq.getName()));
-            bo.updateLowStock();
+            bo.setBrand(rq.getBrand());
 
-            // CATEGORY HANDLING
+            bo.setSpecificationsJson(rq.getSpecificationsJson());
+
+
+            // =====================
+// CATEGORY HANDLING
+// =====================
             if (rq.getCategoryId() != null) {
-                CategoryBO category = categoryRepo.findById(rq.getCategoryId())
-                        .orElse(null);
 
-                if (category == null) {
+                CategoryBO category = categoryRepo.findById(rq.getCategoryId())
+                        .orElseThrow(() ->
+                                new RuntimeException("Category not found")
+                        );
+
+                bo.setCategoryId(category.getId());
+                bo.setCategoryName(category.getName());
+
+            } else {
+
+                // Seller selected "Other"
+                if (Utils.isEmpty(rq.getCustomCategoryName())) {
                     return ResponseUtils.failure(
-                            ErrorCodes.EC_RECORD_NOT_FOUND,
-                            "Category not found"
+                            ErrorCodes.EC_INVALID_INPUT,
+                            "Category name is required"
                     );
+                }
+
+                // Check if category already exists
+                Optional<CategoryBO> existing =
+                        categoryRepo.findByNameIgnoreCase(rq.getCustomCategoryName());
+
+                CategoryBO category;
+                if (existing.isPresent()) {
+                    category = existing.get();
+                } else {
+                    // Create new category (inactive by default)
+                    category = CategoryBO.builder()
+                            .name(rq.getCustomCategoryName().trim())
+                            .slug(SlugUtils.from(rq.getCustomCategoryName()))
+                            .active(false) // admin approval required
+                            .build();
+
+                    categoryRepo.save(category);
                 }
 
                 bo.setCategoryId(category.getId());
                 bo.setCategoryName(category.getName());
-            } else {
-                if (Utils.isEmpty(rq.getCustomCategoryName())) {
-                    return ResponseUtils.failure(
-                            ErrorCodes.EC_INVALID_INPUT,
-                            "Custom category name required"
-                    );
-                }
-                bo.setCategoryId(null);
-                bo.setCategoryName(rq.getCustomCategoryName());
             }
 
-            // =====================================================
-            // IMAGE VALIDATION & UPLOAD
-            // =====================================================
+
+            // Images
             List<MultipartFile> images = rq.getImages();
             if (images != null && !images.isEmpty()) {
 
-                //  Max 5 images allowed
                 if (images.size() > 5) {
-                    return ResponseUtils.failure(
-                            "TOO_MANY_IMAGES",
-                            "Maximum 5 images allowed"
-                    );
+                    return ResponseUtils.failure("TOO_MANY_IMAGES", "Maximum 5 images allowed");
                 }
 
                 for (MultipartFile file : images) {
                     if (file.isEmpty()) continue;
 
-                    //  Accept only JPG/PNG
-                    String type = file.getContentType();
-                    if (!List.of("image/jpeg", "image/png")
-                            .contains(type)) {
-                        return ResponseUtils.failure(
-                                "INVALID_FILE_TYPE",
-                                "Only JPG and PNG images are allowed"
-                        );
+                    if (!List.of("image/jpeg", "image/png").contains(file.getContentType())) {
+                        return ResponseUtils.failure("INVALID_FILE_TYPE", "Only JPG and PNG images are allowed");
                     }
 
-                    //  Max 2MB per file
                     if (file.getSize() > 2 * 1024 * 1024) {
-                        return ResponseUtils.failure(
-                                "FILE_TOO_LARGE",
-                                "File size must be <= 2MB"
-                        );
+                        return ResponseUtils.failure("FILE_TOO_LARGE", "File size must be <= 2MB");
                     }
 
                     FileBO uploaded = fileService.uploadAndReturnFile(file);
@@ -165,26 +177,26 @@ public class ProductServiceImpl implements ProductService {
                 }
             }
 
-            //  Prevent product creation without image
             if (bo.getImageFileIds().isEmpty()) {
-                return ResponseUtils.failure(
-                        "NO_IMAGE",
-                        "Product must have at least one image"
-                );
+                return ResponseUtils.failure("NO_IMAGE", "Product must have at least one image");
             }
 
             productRepo.save(bo);
 
-            userActivityService.log(
-                    sellerId,
-                    "PRODUCT_CREATED",
-                    "Created product: " + bo.getName()
+            userActivityService.log(sellerId, "PRODUCT_CREATED", "Created product: " + bo.getName());
+
+            notificationService.notifyAdmins(
+                    "PRODUCT_ADDED",
+                    "New Product Added",
+                    bo.getName() + " added successfully!",
+                    null,
+                    bo,
+                    null,
+                    "/admin/products/" + bo.getSlug()
             );
 
-            ProductRs rs = ProductMapper.mapToProductRs(bo, fileService);
-            return ResponseUtils.success(
-                    new ProductDataRs("Product created successfully", rs)
-            );
+            return ResponseUtils.success(new ProductDataRs("Product created successfully",
+                    productMapper.toProductRs(bo)));
 
         } catch (Exception e) {
             log.error("addProduct() failed", e);
@@ -192,162 +204,103 @@ public class ProductServiceImpl implements ProductService {
         }
     }
 
-
-
-
-    // ===========================================================
-    // UPDATE PRODUCT
-    // ===========================================================
+    // ======================================================================
+    // SELLER: UPDATE PRODUCT
+    // ======================================================================
     @Override
     @Transactional
     public BaseRs updateProduct(ProductRq rq) {
-
         try {
             validateSellerAccess();
 
             if (rq.getDocId() == null) {
-                return ResponseUtils.failure(
-                        ErrorCodes.EC_REQUIRED_DOCID,
-                        "Product ID required"
-                );
+                return ResponseUtils.failure(ErrorCodes.EC_REQUIRED_DOCID, "Product ID required");
             }
 
-            Long productId = Long.parseLong(rq.getDocId());
-            ProductBO product = productRepo.findById(productId)
-                    .orElse(null);
+            Long productId = Long.valueOf(rq.getDocId());
+            ProductBO product = productRepo.findById(productId).orElse(null);
 
             if (product == null) {
-                return ResponseUtils.failure(
-                        ErrorCodes.EC_PRODUCT_NOT_FOUND,
-                        "Product not found"
-                );
+                return ResponseUtils.failure(ErrorCodes.EC_PRODUCT_NOT_FOUND, "Product not found");
             }
 
             Long sellerId = AuthUtils.findLoggedInUser().getDocId();
             if (!product.getSeller().getId().equals(sellerId)) {
-                return ResponseUtils.failure(
-                        ErrorCodes.EC_UNAUTHORIZED,
-                        "Unauthorized"
-                );
+                return ResponseUtils.failure(ErrorCodes.EC_UNAUTHORIZED, "Unauthorized");
             }
 
-            // =====================================================================
-            // ONLY ACTIVE/INACTIVE TOGGLE
-            // =====================================================================
+            // Active toggle only
             if (rq.getActive() != null &&
                     rq.getName() == null &&
                     rq.getDescription() == null &&
                     rq.getPrice() == null &&
                     rq.getStock() == null &&
                     rq.getCategoryId() == null &&
-                    rq.getCustomCategoryName() == null)
-            {
+                    rq.getCustomCategoryName() == null) {
+
                 product.setActive(rq.getActive());
                 productRepo.save(product);
 
-                //  BONUS #1: Remove from all carts if deactivated
                 if (!product.isActive()) {
                     cartRepo.deleteByProduct_Id(product.getId());
                 }
 
-                ProductRs rs = ProductMapper.mapToProductRs(product, fileService);
-                return ResponseUtils.success(
-                        new ProductDataRs("Product status updated", rs)
-                );
+                return ResponseUtils.success(new ProductDataRs("Product status updated",
+                        productMapper.toProductRs(product)));
             }
 
-            // =====================================================================
-            // FULL PRODUCT UPDATE
-            // =====================================================================
-
-            // Name
+            // Full update
             if (Utils.isNotEmpty(rq.getName())) {
                 product.setName(rq.getName());
-                product.setSlug(generateUniqueSlug(rq.getName()));
+                product.setSlug(SlugUtils.from(rq.getName()));
             }
 
-            // Description
             if (Utils.isNotEmpty(rq.getDescription())) {
                 product.setDescription(rq.getDescription());
             }
 
-            // Price validation
-            if (rq.getPrice() != null) {
-                if (rq.getPrice() <= 0) {
-                    return ResponseUtils.failure(
-                            ErrorCodes.EC_INVALID_INPUT,
-                            "Price must be greater than 0"
-                    );
-                }
+            if (rq.getPrice() != null && rq.getPrice() > 0) {
                 product.setPrice(rq.getPrice());
             }
 
             boolean stockChanged = false;
 
-            // Stock validation
-            if (rq.getStock() != null) {
-                if (rq.getStock() < 0) {
-                    return ResponseUtils.failure(
-                            ErrorCodes.EC_INVALID_INPUT,
-                            "Stock cannot be negative"
-                    );
-                }
+            if (rq.getStock() != null && rq.getStock() >= 0) {
                 product.setStock(rq.getStock());
                 product.updateLowStock();
                 stockChanged = true;
             }
 
-            // CATEGORY HANDLING
             if (rq.getCategoryId() != null) {
-                CategoryBO category =
-                        categoryRepo.findById(rq.getCategoryId()).orElse(null);
+                CategoryBO category = categoryRepo.findById(rq.getCategoryId()).orElse(null);
                 if (category == null) {
-                    return ResponseUtils.failure(
-                            ErrorCodes.EC_RECORD_NOT_FOUND,
-                            "Category not found"
-                    );
+                    return ResponseUtils.failure(ErrorCodes.EC_RECORD_NOT_FOUND, "Category not found");
                 }
                 product.setCategoryId(category.getId());
                 product.setCategoryName(category.getName());
-            }
-            else if (Utils.isNotEmpty(rq.getCustomCategoryName())) {
+            } else if (Utils.isNotEmpty(rq.getCustomCategoryName())) {
                 product.setCategoryId(null);
                 product.setCategoryName(rq.getCustomCategoryName());
             }
 
-            productRepo.save(product);
-
-            // =====================================================
-// IMAGE ADDING (NEW)
-// =====================================================
+            // Add images
             if (rq.getImages() != null && !rq.getImages().isEmpty()) {
+                int existing = product.getImageFileIds().size();
+                int incoming = rq.getImages().size();
 
-                int currentImages = product.getImageFileIds().size();
-                int newImages = rq.getImages().size();
-
-                if (currentImages + newImages > 5) {
-                    return ResponseUtils.failure(
-                            "TOO_MANY_IMAGES",
-                            "You can only upload up to 5 images"
-                    );
+                if (existing + incoming > 5) {
+                    return ResponseUtils.failure("TOO_MANY_IMAGES", "You can only upload up to 5 images");
                 }
 
                 for (MultipartFile file : rq.getImages()) {
                     if (file.isEmpty()) continue;
 
-                    String contentType = file.getContentType();
-                    if (!List.of("image/jpeg", "image/png").contains(contentType)) {
-                        return ResponseUtils.failure(
-                                "INVALID_FILE_TYPE",
-                                "Only JPG and PNG allowed"
-                        );
+                    if (!List.of("image/jpeg", "image/png").contains(file.getContentType())) {
+                        return ResponseUtils.failure("INVALID_FILE_TYPE", "Only JPG and PNG allowed");
                     }
 
                     if (file.getSize() > 2 * 1024 * 1024) {
-                        return ResponseUtils.failure(
-                                "FILE_TOO_LARGE",
-                                "Max size 2MB allowed"
-                        );
+                        return ResponseUtils.failure("FILE_TOO_LARGE", "Max size 2MB allowed");
                     }
 
                     FileBO uploaded = fileService.uploadAndReturnFile(file);
@@ -357,14 +310,11 @@ public class ProductServiceImpl implements ProductService {
 
             productRepo.save(product);
 
-            // =====================================================================
-            //  BONUS #2: Remove cart entries if stock reduced or became zero
-            // =====================================================================
+            // Cart sync
             if (stockChanged) {
                 if (product.getStock() <= 0) {
                     cartRepo.deleteByProduct_Id(product.getId());
                 } else {
-                    // If qty in any cart > new stock → disable those cart items
                     cartRepo.findAllByProduct_Id(product.getId()).stream()
                             .filter(c -> c.getQuantity() > product.getStock())
                             .forEach(c -> {
@@ -374,33 +324,31 @@ public class ProductServiceImpl implements ProductService {
                 }
             }
 
-            // =====================================================================
-            // RESPONSE WITH UPDATED PRODUCT DATA
-            // =====================================================================
-            ProductRs rs = ProductMapper.mapToProductRs(product, fileService);
-            return ResponseUtils.success(
-                    new ProductDataRs("Product updated successfully", rs)
+            notificationService.notifyAdmins(
+                    "PRODUCT_UPDATED",
+                    "Product Updated",
+                    product.getName(),
+                    null,
+                    product,
+                    null,
+                    "/admin/products/" + product.getId()
             );
-        }
-        catch (Exception e) {
+
+            return ResponseUtils.success(new ProductDataRs("Product updated successfully",
+                    productMapper.toProductRs(product)));
+
+        } catch (Exception e) {
             log.error("updateProduct() failed", e);
-            return ResponseUtils.failure(
-                    ErrorCodes.EC_INTERNAL_ERROR,
-                    e.getMessage()
-            );
+            return ResponseUtils.failure(ErrorCodes.EC_INTERNAL_ERROR, e.getMessage());
         }
     }
 
-
-
-
-    // ===========================================================
-    // UPLOAD IMAGES
-    // ===========================================================
+    // ======================================================================
+    // SELLER: IMAGE UPLOAD
+    // ======================================================================
     @Override
     @Transactional
     public BaseRs uploadProductImages(Long productId, List<MultipartFile> files) {
-
         validateSellerAccess();
 
         try {
@@ -427,31 +375,23 @@ public class ProductServiceImpl implements ProductService {
 
             productRepo.save(bo);
 
-            // -----------------------------------------------------
-            // USER ACTIVITY LOG — IMAGES UPLOADED
-            // -----------------------------------------------------
-            userActivityService.log(
-                    sellerId,
-                    "PRODUCT_IMAGE_UPLOADED",
-                    "Uploaded images for product: " + bo.getName()
-            );
+            userActivityService.log(sellerId, "PRODUCT_IMAGE_UPLOADED",
+                    "Uploaded images for product: " + bo.getName());
 
             return ResponseUtils.success(new BaseDataRs("Images uploaded successfully", imageIds));
-        }
-        catch (Exception e) {
+
+        } catch (Exception e) {
             log.error("uploadProductImages() failed", e);
             return ResponseUtils.failure(ErrorCodes.EC_INTERNAL_ERROR, e.getMessage());
         }
     }
 
-
-    // ===========================================================
-    // GET PRODUCT IMAGES (SELLER ONLY)
-    // ===========================================================
+    // ======================================================================
+    // SELLER: GET PRODUCT IMAGES
+    // ======================================================================
     @Override
     public BaseRs getProductImages(Long productId) {
-
-        validateSellerAccess();  // REQUIRED
+        validateSellerAccess();
 
         try {
             if (productId == null || productId <= 0) {
@@ -468,20 +408,17 @@ public class ProductServiceImpl implements ProductService {
                     .map(id -> "/api/files/public/" + id + "/view")
                     .toList();
 
-            return ResponseUtils.success(
-                    new BaseDataRs("Product images retrieved", imageUrls)
-            );
-        }
-        catch (Exception e) {
+            return ResponseUtils.success(new BaseDataRs("Product images retrieved", imageUrls));
+
+        } catch (Exception e) {
             log.error("getProductImages() failed", e);
             return ResponseUtils.failure(ErrorCodes.EC_INTERNAL_ERROR, e.getMessage());
         }
     }
 
-
-    // ===========================================================
-    // DELETE IMAGE
-    // ===========================================================
+    // ======================================================================
+    // SELLER: DELETE PRODUCT IMAGE
+    // ======================================================================
     @Override
     @Transactional
     public BaseRs deleteProductImage(Long productId, Long imageId) {
@@ -492,94 +429,49 @@ public class ProductServiceImpl implements ProductService {
             ProductBO product = productRepo.findById(productId)
                     .orElseThrow(() -> new RuntimeException("Product not found"));
 
-            //  Ownership check (Security)
             if (!product.getSeller().getId().equals(sellerId)) {
                 return ResponseUtils.failure(
-                        ErrorCodes.EC_UNAUTHORIZED,
-                        "You are not allowed to modify this product"
+                        ErrorCodes.EC_UNAUTHORIZED, "You are not allowed to modify this product"
                 );
             }
 
-            List<Long> imageList = product.getImageFileIds();
-            if (imageList == null || imageList.isEmpty()) {
-                return ResponseUtils.failure(
-                        ErrorCodes.EC_IMAGE_NOT_FOUND,
-                        "No images found for this product"
-                );
+            List<Long> imgList = product.getImageFileIds();
+
+            if (imgList.isEmpty()) {
+                return ResponseUtils.failure(ErrorCodes.EC_IMAGE_NOT_FOUND, "No images found");
             }
 
-            //  Prevent removing last image
-            if (imageList.size() == 1) {
-                return ResponseUtils.failure(
-                        "LAST_IMAGE",
-                        "At least one image must remain for this product"
-                );
+            if (imgList.size() == 1) {
+                return ResponseUtils.failure("LAST_IMAGE", "At least one image must remain");
             }
 
-            //  Ensure image belongs to this product
-            if (!imageList.contains(imageId)) {
-                return ResponseUtils.failure(
-                        ErrorCodes.EC_IMAGE_NOT_FOUND,
-                        "Image does not belong to this product"
-                );
+            if (!imgList.contains(imageId)) {
+                return ResponseUtils.failure(ErrorCodes.EC_IMAGE_NOT_FOUND, "Image does not belong to this product");
             }
 
-            //  Remove image reference from product
-            imageList.remove(imageId);
+            imgList.remove(imageId);
             productRepo.save(product);
 
-            //  Delete actual file
             fileService.deleteFileById(String.valueOf(imageId));
 
-            // Log action
-            userActivityService.log(
-                    sellerId,
+            userActivityService.log(sellerId,
                     "PRODUCT_IMAGE_DELETED",
-                    "Deleted image " + imageId + " from product: " + product.getName()
-            );
+                    "Deleted image " + imageId + " from product: " + product.getName());
 
             return ResponseUtils.success("Image deleted successfully");
-        }
-        catch (Exception e) {
+
+        } catch (Exception e) {
             log.error("deleteProductImage() failed", e);
-            return ResponseUtils.failure(
-                    ErrorCodes.EC_INTERNAL_ERROR,
-                    "Failed to delete product image"
-            );
+            return ResponseUtils.failure(ErrorCodes.EC_INTERNAL_ERROR, "Failed to delete product image");
         }
     }
 
-
-
-    // ===========================================================
-    // SHARE PRODUCT (PUBLIC)
-    // ===========================================================
-    @Override
-    public String getShareableProduct(String slug) {
-
-        try {
-            ProductBO bo = productRepo.findBySlug(slug).orElse(null);
-
-            if (bo == null) {
-                return "Product not found";
-            }
-
-            return buildShareMessage(bo);
-        }
-        catch (Exception e) {
-            log.error("getShareableProduct() failed", e);
-            return "Error generating share message";
-        }
-    }
-
-
-    // ===========================================================
-    // DELETE PRODUCT
-    // ===========================================================
+    // ======================================================================
+    // SELLER: DELETE PRODUCT
+    // ======================================================================
     @Override
     @Transactional
     public BaseRs deleteProduct(Long productId) {
-
         validateSellerAccess();
 
         try {
@@ -591,124 +483,37 @@ public class ProductServiceImpl implements ProductService {
 
             Long sellerId = AuthUtils.getLoggedUserId();
             if (!bo.getSeller().getId().equals(sellerId)) {
-                return ResponseUtils.failure(ErrorCodes.EC_UNAUTHORIZED, "Unauthorized action");
+                return ResponseUtils.failure(ErrorCodes.EC_UNAUTHORIZED, "Unauthorized");
             }
 
-            //  Instead of deleting — soft delete
             bo.setActive(false);
             productRepo.save(bo);
 
-            userActivityService.log(
-                    sellerId,
+            userActivityService.log(sellerId,
                     "PRODUCT_DELETED",
-                    "Deleted product: " + bo.getName()
-            );
+                    "Deleted product: " + bo.getName());
 
             return ResponseUtils.success("Product deleted successfully");
-        }
-        catch (Exception e) {
+
+        } catch (Exception e) {
             log.error("deleteProduct() failed", e);
             return ResponseUtils.failure(ErrorCodes.EC_INTERNAL_ERROR, e.getMessage());
         }
     }
 
-
-
-
-    @Override
-    public BaseRs listProducts(int offset, int limit) {
-
-        try {
-            if (limit <= 0) limit = 20;
-            if (offset < 0) offset = 0;
-
-            int page = offset / limit;
-
-            Pageable pageable = PageRequest.of(page, limit);
-
-            // ONLY ACTIVE PRODUCTS
-            Page<ProductBO> pageData = productRepo.findByActiveTrue(pageable);
-
-            List<ProductRs> rsList =
-                    ProductMapper.mapToProductRsList(pageData.getContent(), fileService);
-
-            return ResponseUtils.success(
-                    new ProductDataRsList("Products retrieved successfully", rsList)
-            );
-
-        } catch (Exception e) {
-            log.error("listProducts() failed", e);
-            return ResponseUtils.failure(ErrorCodes.EC_INTERNAL_ERROR, e.getMessage());
-        }
-    }
-
-
-
-
-    @Override
-    public BaseRs getProductsByCategory(String category, int offset, int limit) {
-
-        try {
-            if (Utils.isEmpty(category)) {
-                return ResponseUtils.failure(ErrorCodes.EC_INVALID_INPUT, "Category is required");
-            }
-
-            if (limit <= 0) limit = 20;
-            if (offset < 0) offset = 0;
-
-            Pageable pageable = PageRequest.of(offset / limit, limit);
-
-            Page<ProductBO> page = productRepo.findByCategoryNameIgnoreCase(category, pageable);
-
-            if (page.isEmpty()) {
-                return ResponseUtils.failure(ErrorCodes.EC_NO_RECORDS_FOUND, "No products found for this category");
-            }
-
-            List<ProductRs> rsList =
-                    ProductMapper.mapToProductRsList(page.getContent(), fileService);
-
-            return ResponseUtils.success(
-                    new ProductDataRsList("Products retrieved successfully", rsList)
-            );
-        }
-        catch (Exception e) {
-            log.error("getProductsByCategory() failed", e);
-            return ResponseUtils.failure(ErrorCodes.EC_INTERNAL_ERROR, e.getMessage());
-        }
-    }
-
-
-    @Override
-    public BaseRs searchProducts(String name, int offset, int limit) {
-
-        try {
-            Pageable pageable = PageRequest.of(offset, limit);
-            Page<ProductBO> page = productRepo.findByNameContainingIgnoreCase(name, pageable);
-
-            List<ProductRs> rsList = ProductMapper.mapToProductRsList(page.getContent(), fileService);
-            return ResponseUtils.success(new ProductDataRsList("Products retrieved", rsList));
-        }
-        catch (Exception e) {
-            log.error("searchProducts() failed", e);
-            return ResponseUtils.failure(ErrorCodes.EC_INTERNAL_ERROR, e.getMessage());
-        }
-    }
-
+    // ======================================================================
+    // SELLER: LIST OWN PRODUCTS
+    // ======================================================================
     @Override
     public BaseRs listSellerProducts(boolean showInactive) {
         Long sellerId = AuthUtils.findLoggedInUser().getDocId();
 
-        List<ProductBO> products;
+        List<ProductBO> products = productRepo.findBySellerId(sellerId);
 
-        if (showInactive) {
-            // return all (active + inactive)
-            products = productRepo.findBySellerId(sellerId);
-        } else {
-            // return only active
-            products = productRepo.findBySellerId(sellerId)
-                    .stream()
+        if (!showInactive) {
+            products = products.stream()
                     .filter(ProductBO::isActive)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         for (ProductBO p : products) {
@@ -722,14 +527,17 @@ public class ProductServiceImpl implements ProductService {
     @Override
     public BaseRs listAdminProducts(int page, int size, String sortBy, String direction) throws Exception {
 
-        Sort sort = direction.equalsIgnoreCase("asc") ?
-                Sort.by(sortBy).ascending() :
-                Sort.by(sortBy).descending();
+        // 1 — Build sorting
+        Sort sort = direction.equalsIgnoreCase("asc")
+                ? Sort.by(sortBy).ascending()
+                : Sort.by(sortBy).descending();
 
         Pageable pageable = PageRequest.of(page, size, sort);
 
+        // 2 — Query products
         Page<ProductBO> productsPage = productRepo.findAll(pageable);
 
+        // 3 — Convert to result list
         List<Map<String, Object>> result = productsPage.getContent()
                 .stream()
                 .map(p -> {
@@ -743,10 +551,11 @@ public class ProductServiceImpl implements ProductService {
                     map.put("categoryName", p.getCategoryName());
                     map.put("categoryId", p.getCategoryId());
                     map.put("slug", p.getSlug());
+                    map.put("active", p.isActive());
                     map.put("createdAt", p.getCreatedAt());
                     map.put("updatedAt", p.getUpdatedAt());
 
-                    // Image URLs
+                    // Images
                     List<String> imageUrls = p.getImageFileIds()
                             .stream()
                             .map(id -> "/api/files/public/" + id + "/view")
@@ -766,7 +575,7 @@ public class ProductServiceImpl implements ProductService {
                 })
                 .toList();
 
-        // Build response body
+        // 4 — Build final response body
         Map<String, Object> responseData = new LinkedHashMap<>();
         responseData.put("products", result);
         responseData.put("page", productsPage.getNumber());
@@ -776,12 +585,9 @@ public class ProductServiceImpl implements ProductService {
         responseData.put("isLast", productsPage.isLast());
         responseData.put("isFirst", productsPage.isFirst());
 
-        // Build BaseDataRs
-        BaseDataRs dataRs = new BaseDataRs();
-        dataRs.setMessage("Admin product list fetched");
-        dataRs.setData(responseData);
+        // 5 — Build BaseRs wrapper
+        BaseDataRs dataRs = new BaseDataRs("Admin product list fetched", responseData);
 
-        // Build BaseRs
         BaseRs response = new BaseRs();
         response.setStatus("SUCCESS");
         response.setData(dataRs);
@@ -790,24 +596,237 @@ public class ProductServiceImpl implements ProductService {
     }
 
 
+    // ======================================================================
+    // SELLER: PRODUCT DETAILS FOR EDITING
+    // ======================================================================
+    @Override
+    public ProductRs getProductDetailsForSeller(Long productId) throws Exception {
+        ProductBO bo = productRepo.findById(productId)
+                .orElseThrow(() -> new RuntimeException("Product not found"));
 
-    // ===========================================================
-    // HELPERS
-    // ===========================================================
-    private String generateSlug(String name) {
-        String base = name.toLowerCase()
-                .replaceAll("[^a-z0-9]+", "-")
-                .replaceAll("^-|-$", "");
-        return base + "-" + UUID.randomUUID().toString().substring(0, 8);
-    }
+        Long sellerId = AuthUtils.findLoggedInUser().getDocId();
+        String role = AuthUtils.getLoggedUserRole();
 
-    private String generateUniqueSlug(String name) {
-        String slug = generateSlug(name);
-        while (productRepo.existsBySlug(slug)) {
-            slug = generateSlug(name);
+        if (!role.equalsIgnoreCase("ADMIN")
+                && !bo.getSeller().getId().equals(sellerId)) {
+            throw new RuntimeException("Unauthorized access");
         }
-        return slug;
+
+        return productMapper.toProductRs(bo);
     }
+
+    // ======================================================================
+    // PUBLIC: PRODUCT DETAILS PAGE
+    // ======================================================================
+    @Override
+    public ProductDetailsRs getProductDetails(String slug) {
+
+        ProductBO product = productRepo.findBySlug(slug)
+                .orElseThrow(() -> new RuntimeException("Product not found"));
+
+        if (!product.isActive()) {
+            throw new RuntimeException("Product is not available");
+        }
+
+        return productMapper.toDetails(product);
+    }
+
+
+    // ======================================================================
+    // PUBLIC: SHARE PRODUCT MESSAGE
+    // ======================================================================
+    @Override
+    public String getShareableProduct(String slug) {
+        try {
+            ProductBO bo = productRepo.findBySlug(slug).orElse(null);
+
+            if (bo == null) return "Product not found";
+
+            return buildShareMessage(bo);
+
+        } catch (Exception e) {
+            log.error("getShareableProduct() failed", e);
+            return "Error generating share message";
+        }
+    }
+
+    // ======================================================================
+    // PUBLIC: GENERAL PRODUCT LIST
+    // ======================================================================
+    @Override
+    public BaseRs listProducts(int offset, int limit) {
+        try {
+            if (limit <= 0) limit = 20;
+            if (offset < 0) offset = 0;
+
+            Pageable pageable = PageRequest.of(offset / limit, limit);
+            Page<ProductBO> pageData = productRepo.findByActiveTrue(pageable);
+
+            return ResponseUtils.success(
+                    new ProductDataRsList("Products retrieved successfully",
+                            productMapper.toProductRsList(pageData.getContent())));  // ← CHANGED
+
+        } catch (Exception e) {
+            log.error("listProducts() failed", e);
+            return ResponseUtils.failure(ErrorCodes.EC_INTERNAL_ERROR, e.getMessage());
+        }
+    }
+
+    // ======================================================================
+    // PUBLIC: CATEGORY PRODUCTS
+    // ======================================================================
+    @Override
+    public BaseRs getProductsByCategory(String category, int offset, int limit) {
+        try {
+            if (Utils.isEmpty(category)) {
+                return ResponseUtils.failure(ErrorCodes.EC_INVALID_INPUT, "Category is required");
+            }
+
+            Pageable pageable = PageRequest.of(offset / limit, limit);
+            Page<ProductBO> page = productRepo.findByCategoryNameIgnoreCase(category, pageable);
+
+            if (page.isEmpty()) {
+                return ResponseUtils.failure(ErrorCodes.EC_NO_RECORDS_FOUND, "No products found for this category");
+            }
+
+            return ResponseUtils.success(
+                    new ProductDataRsList("Products retrieved successfully",
+                            productMapper.toProductRsList(page.getContent())));  // ← CHANGED
+
+        } catch (Exception e) {
+            log.error("getProductsByCategory() failed", e);
+            return ResponseUtils.failure(ErrorCodes.EC_INTERNAL_ERROR, e.getMessage());
+        }
+    }
+
+
+    // ======================================================================
+    // PUBLIC: SEARCH PRODUCTS
+    // ======================================================================
+    @Override
+    public BaseRs searchProducts(String name, int offset, int limit) {
+        try {
+            Pageable pageable = PageRequest.of(offset, limit);
+            Page<ProductBO> page = productRepo.findByNameContainingIgnoreCase(name, pageable);
+
+            return ResponseUtils.success(
+                    new ProductDataRsList("Products retrieved",
+                            productMapper.toProductRsList(page.getContent())));  // ← CHANGED
+
+        } catch (Exception e) {
+            log.error("searchProducts() failed", e);
+            return ResponseUtils.failure(ErrorCodes.EC_INTERNAL_ERROR, e.getMessage());
+        }
+    }
+
+
+    // ======================================================================
+    // PUBLIC: HOMEPAGE PRODUCT LIST
+    // ======================================================================
+    @Override
+    public Page<ProductCardRs> getProducts(String category, int page, int size, String sort) throws Exception {
+        Sort sortSpec;
+        try {
+            String[] sortParts = sort.split(",");
+            sortSpec = sortParts[1].equalsIgnoreCase("asc")
+                    ? Sort.by(sortParts[0]).ascending()
+                    : Sort.by(sortParts[0]).descending();
+        } catch (Exception e) {
+            sortSpec = Sort.by("createdAt").descending();
+        }
+
+        Pageable pageable = PageRequest.of(page, size, sortSpec);
+
+        Page<ProductBO> pageData =
+                (category == null || category.isBlank())
+                        ? productRepo.findByActiveTrue(pageable)
+                        : productRepo.findByActiveTrueAndCategoryNameIgnoreCase(category, pageable);
+
+        return pageData.map(productMapper::toCardRs);  // ← CHANGED
+    }
+
+    // ======================================================================
+    // PUBLIC: HOMEPAGE SEARCH PRODUCTS
+    // ======================================================================
+    @Override
+    public Page<ProductCardRs> searchProducts(String q, String category, int page, int size) throws Exception {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
+
+        Page<ProductBO> pageData;
+
+        if (category == null || category.isBlank()) {
+            pageData = productRepo.findByActiveTrueAndNameContainingIgnoreCase(q, pageable);
+        } else {
+            pageData = productRepo.findByActiveTrueAndNameContainingIgnoreCaseAndCategoryNameIgnoreCase(
+                    q, category, pageable
+            );
+        }
+
+        return pageData.map(productMapper::toCardRs);  // ← CHANGED
+    }
+
+    // ======================================================================
+    // PUBLIC: SHOP FILTER SYSTEM (CATEGORY, PRICE, BRAND, RATING, SORT)
+    // ======================================================================
+    @Override
+    public Page<ProductCardRs> filterProducts(
+            String category,
+            String brand,
+            Integer minPrice,
+            Integer maxPrice,
+            Integer rating,
+            String sort,
+            int page,
+            int size
+    ) {
+        Sort sortSpec = Sort.by(sort.split(",")[0]);
+        if (sort.endsWith("asc")) {
+            sortSpec = sortSpec.ascending();
+        } else {
+            sortSpec = sortSpec.descending();
+        }
+
+        Pageable pageable = PageRequest.of(page, size, sortSpec);
+
+        List<String> categories = null;
+        if (category != null && !category.isBlank()) {
+            categories = Arrays.stream(category.split(","))
+                    .map(String::toLowerCase)
+                    .toList();
+        }
+
+        List<String> brands = null;
+        if (brand != null && !brand.isBlank()) {
+            brands = Arrays.stream(brand.split(","))
+                    .map(String::toLowerCase)
+                    .toList();
+        }
+
+        Page<ProductBO> pageData = productRepo.filterProducts(
+                categories, brands, minPrice, maxPrice, rating, pageable
+        );
+
+        return pageData.map(productMapper::toCardRs);  // ← CHANGED
+    }
+
+
+    // ======================================================================
+    // INTERNAL HELPERS
+    // ======================================================================
+//    private String generateSlug(String name) {
+//        String base = name.toLowerCase()
+//                .replaceAll("[^a-z0-9]+", "-")
+//                .replaceAll("^-|-$", "");
+//        return base + "-" + UUID.randomUUID().toString().substring(0, 8);
+//    }
+//
+//    private String generateUniqueSlug(String name) {
+//        String slug = generateSlug(name);
+//        while (productRepo.existsBySlug(slug)) {
+//            slug = generateSlug(name);
+//        }
+//        return slug;
+//    }
 
     private String buildShareMessage(ProductBO product) {
         return "Check out this product: " + product.getName()
@@ -831,8 +850,9 @@ public class ProductServiceImpl implements ProductService {
         }
 
         if (!seller.isVerified()) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Your seller account is still pending admin approval.");
-
+            throw new ResponseStatusException(
+                    HttpStatus.FORBIDDEN, "Your seller account is still pending admin approval."
+            );
         }
 
         if (seller.isLocked()) {
@@ -843,4 +863,3 @@ public class ProductServiceImpl implements ProductService {
     }
 
 }
-
